More fixes to make the javaagent help string wrap and look right

--- a/codepulse/src/main/resources/toserve/pages/projects/trace-recording-controls.css
+++ b/codepulse/src/main/resources/toserve/pages/projects/trace-recording-controls.css
@@ -262,7 +262,8 @@
 #connection-help-popup code {
 	display: block;
 	padding: .5em;
-	white-space: normal;
+	white-space: pre;
+	overflow-wrap: break-word;
 }
 #connection-help-popup .dismissal {
 	display: block;
